--- a/portfolio.html
+++ b/portfolio.html
@@ -18,62 +18,62 @@
 <body>
     <!-- start navigationbar -->
     <header class="items-transtion">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg p-0 ">
-                    <a class="navbar-brand mr-0" href="index.html">
-                        <img src="images/logo2.png" alt="">
-                    </a>
-                    <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
-                        <ul class="navbar-nav">
-                            <li class="nav-item ">
-                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                            </li>
-    
-                            <li class="nav-item ">
-                                    <a class="nav-link " href="about-us.html" >
-                                        about us
-                                    </a>
-                                </li>
-                            <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    maitenance
-                                </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="services.html">services </a>
-                                    <a class="dropdown-item" href="portfolio.html">maintenance project </a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    consultancy
-                                </a>
-                                <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="projectManagement.html">Project Management </a>
-                                    <a class="dropdown-item" href="costManagement.html">cost Management </a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="design.html">design</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link " href="interiorFitOut.html">
-                                    interior fit out
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#footer-section">contact us</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </header>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg p-0 ">
+                <a class="navbar-brand mr-0" href="index.html">
+                    <img src="images/logo2.png" alt="">
+                </a>
+                <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="header-navbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+
+                        <li class="nav-item ">
+                            <a class="nav-link " href="about-us.html">
+                                about us
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                maitenance
+                            </a>
+                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="services.html">services </a>
+                                <a class="dropdown-item" href="portfolio.html">maintenance project </a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                consultancy
+                            </a>
+                            <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="projectManagement.html">Project Management </a>
+                                <a class="dropdown-item" href="costManagement.html">cost Management </a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="design.html">design</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="interiorFitOut.html">
+                                interior fit out
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#footer-section">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
     <section id="hero-portfolio__section" class="background-prop">
@@ -91,9 +91,7 @@
                 <div class="row no-gutters">
                     <div class=" col-md-12 text-center">
                         <ul class="list-unstyled portfolio-items mb-5">
-                            <li data-filter="all">all</li>
-                            <!-- <li data-filter="*">architecture </li> -->
-                            <!-- <li data-filter="*">commercial Design </li> -->
+                            <li class="mixitup-control-active" data-filter="all">all</li>
                             <li data-filter=".interior-Design">interior Design </li>
                             <li data-filter=".offices">offices </li>
                             <li data-filter=".hotels">hotels </li>
@@ -104,125 +102,95 @@
                     </div>
                 </div>
 
-                <div class="row no-gutters portfolio-list">
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery3.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4 ">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery5.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4 ">
-                        <div class="mix retail">
-                            <img src="images/portfolio/gallery6.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery7.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix offices">
-                            <img src="images/portfolio/gallery8.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix retail">
-                            <img src="images/portfolio/gallery10.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix retail">
-                            <img src="images/portfolio/gallery11.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix house">
-                            <img src="images/portfolio/gallery12.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery13.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix resturant">
-                            <img src="images/portfolio/gallery14.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix offices">
-                            <img src="images/portfolio/gallery18.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery19.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix hotels ">
-                            <img src="images/portfolio/gallery20.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix interior-Design">
-                            <img src="images/portfolio/gallery22.jpg" alt="">
-                        </div>
+                <div class="row no-gutters portfolio-list justify-content-center">
+                    <div class="mix interior-Design col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery3.jpg" alt="">
                         <div class="overlay">
                             <h6>eherwood oak gardens</h6>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-4">
-                        <div class="mix hotels">
-                            <img src="images/portfolio/gallery24.jpg" alt="">
-                            <div class="overlay">
-                                <h6>eherwood oak gardens</h6>
-                            </div>
+                    <div class="mix interior-Design col-lg-3 col-md-4 ">
+                        <img src="images/portfolio/gallery5.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix retail col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery6.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix interior-Design col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery7.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix offices col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery8.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix retail col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery10.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix retail col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery11.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix house col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery12.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix interior-Design col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery13.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix resturant col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery14.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix offices col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery18.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix interior-Design col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery19.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix hotels col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery20.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix interior-Design col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery22.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
+                        </div>
+                    </div>
+                    <div class="mix hotels col-lg-3 col-md-4">
+                        <img src="images/portfolio/gallery24.jpg" alt="">
+                        <div class="overlay">
+                            <h6>eherwood oak gardens</h6>
                         </div>
                     </div>
 
@@ -320,6 +288,7 @@
     <a href="#" class="items-transtion" id="arrow">
         <i class="fas fa-chevron-up"></i>
     </a>
+
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.js"></script>
